# siyi_sdk

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  siyi_message.py  siyi_sdk.py
docs/: README.md
siyi_sdk/: cli.py
tests/: test_print_attitude.py  test_siyi_sdk.py
